<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Views.FilterActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewCombustible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/Combustible"
                android:textColor="@color/colorPrimary"
                android:textSize="20dp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkBoxGasoleoA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:text="Gasóleo A"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorLink="@color/colorPrimary" />

            <CheckBox
                android:id="@+id/checkBoxGasolina95"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="Gasolina 95"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorLink="@color/colorPrimary" />

            <TextView
                android:id="@+id/textViewDescuento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/Descuento"
                android:textColor="@color/colorPrimary"
                android:textSize="20dp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkBoxDescuentoSi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:text="Si"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorLink="@color/colorPrimary" />

            <CheckBox
                android:id="@+id/checkBoxDescuentoNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="No"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorLink="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="20dp"
                    android:layout_toLeftOf="@id/buttonApply"
                    android:background="@drawable/roundedbutton"
                    android:backgroundTint="@color/colorAccent"
                    android:text="Cancel"
                    android:textColor="@color/colorPrimary" />

                <Button
                    android:id="@+id/buttonApply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_toRightOf="@id/buttonCancel"
                    android:background="@drawable/roundedbutton"
                    android:backgroundTint="@color/colorAccent"
                    android:text="Apply"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>