<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_precio_gasolina"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="100"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Views.MainActivity">


    <LinearLayout
        android:id="@+id/operacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:paddingBottom="20dp">


        <Button
            android:id="@+id/buttonFiltrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_toEndOf="@+id/spinner"
            android:background="@drawable/roundedbutton"
            android:backgroundTint="@color/colorPrimary"
            android:text="Filtrar"
            android:textColor="#FFFFFF"
            android:textSize="12dp" />

        <Button
            android:id="@+id/buttonReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedbutton"
            android:backgroundTint="@color/colorPrimary"
            android:text="Reset"
            android:textColor="#FFFFFF"
            android:textSize="12dp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewFiltros"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="5" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swiperefresh"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="95">

        <ListView
            android:id="@+id/listViewGasolineras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</LinearLayout>







