...
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/buttonSiBorrarFiltro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="60dp"
...
        android:fontFamily="sans-serif"
        android:text="@string/btnSiBorrarFiltro"
        android:textColor="@color/colorPrimary"
        android:textSize="15dp" />

    <Button
        android:id="@+id/buttonNoBorrarFiltro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="60dp"
...
