...
        android:text="@string/botonAnhadir"
        android:textColor="@color/colorPrimary"
        android:textSize="15dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonMasTarde"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="60dp"
...
