...
            android:layout_marginLeft="@dimen/marginLeftPrecios"
            android:text="@string/gasoleoa"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewGasoleoA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLabelsPrecio"
            android:layout_toRightOf="@+id/textViewGasoleoALabel"
            android:textColor="@color/colorAccent" />

...
            android:layout_toRightOf="@+id/textViewGasoleoA"
            android:text="@string/gasolina95"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewGasolina95"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLabelsPrecio"
            android:layout_toRightOf="@+id/textViewGasolina95Label"
            android:textColor="@color/colorAccent" />

...
